--- a/i/79138df.html
+++ b/i/79138df.html
@@ -253,7 +253,7 @@
 </blockquote>
 <h2 id="文字">文字</h2><p>时间能检验你对爱情的忠诚；时间能证明你口若旋河的真理；当然你完全可以伴着时间一脚步完成你预谋已久的所谓完美华丽的蜕变；时间的累积让我们从幼稚走向成熟；时间让你想明白真正属于自己的一切诸如生活,思考,处理事情的方式,还有归属爱情；时间会让你思考身边的人值不值得相处；时间会判断对与错；时间能驱赶孤独,因为总有一天它会带来宽容理解和爱；天知道,这些美好的时光悄悄溜走的时候我们却毫无知觉也从来不曾感知它；不要叹息,从现在开始,你只要好好珍惜。时间真是个好东西...</p>
 <p>所有的伟大,都源于一个勇敢的开始!</p>
-<h2 id="本地图片">本地图片</h2><p><img src='./assets/tuchong.png' title='' alt='assets' class='post-img-left'></p>
+<h2 id="本地图片">本地图片</h2><p><img src='/assets/tuchong.png' title='' alt='assets' class='post-img-left'></p>
 <h2 id="网络图片">网络图片</h2><p><img src='http://img.1991th.com/tuchongeter/statics/single-gallery-03.jpg' title='' alt='web' class='post-img-left'></p>
 <h2 id="链接">链接</h2><p><a href='#' title='null' target='_self'>天空之城</a>以另一种视角看世界 <strong>我去看世界</strong> <strong>风之谷</strong> <a href='http://www.baidu.com?target=blank' title='null' target='blank'>在新页面打开</a></p>
 <h2 id="列表">列表</h2><table>
