--- a/i/56269d7.html
+++ b/i/56269d7.html
@@ -208,7 +208,19 @@
         <span class="keyword">if</span> (arr[i - <span class="number">1</span>] == arr[i]) <span class="keyword">return</span> <span class="literal">true</span>;
     }
     <span class="keyword">return</span> <span class="literal">false</span>;
-}        </pre></td></tr></tbody></table></figure><h2 id="哈希表">哈希表</h2><figure class='highlight undefined'><table><tbody><tr><td class='code'><pre></pre></td></tr></tbody></table></figure>
+}        </pre></td></tr></tbody></table></figure><h2 id="哈希表">哈希表</h2><figure class='highlight undefined'><table><tbody><tr><td class='code'><pre>public <span class="keyword">static</span> boolean duplicate(int[] arr) {
+    int len = arr.length;
+    <span class="keyword">if</span> (len &lt; <span class="number">2</span>) <span class="keyword">return</span> <span class="literal">false</span>;
+    <span class="built_in">Set</span>&lt;Integer&gt; <span class="keyword">set</span> = new HashSet&lt;&gt;(len);
+    for (int i = 0; i &lt; len; i++) {
+        <span class="keyword">if</span> (<span class="keyword">set</span>.contains(arr[i])) {
+            <span class="keyword">return</span> <span class="literal">true</span>;
+        } <span class="keyword">else</span> {
+            <span class="keyword">set</span>.add(arr[i]);
+        }
+    }
+    return false;
+}</pre></td></tr></tbody></table></figure>
 			</div>
 			
 				<div class="comment_container">
